styles/Footer.module.scss
@import "mixins";

.nav {
  padding-left: 1rem;
  padding-right: 1rem;

  @include media("sm") {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
    padding-bottom: 0.5rem;
  }
}

.menu {
  display: flex;
  align-items: center;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  flex-direction: column;
  width: 100%;

  @include media("sm") {
    flex-direction: row;
  }
}

.menuItem {
  padding: 0 0.5rem;
}

// Grid layout
.nav {
  @include media("xl") {
    display: grid;
    grid-template-columns: 1fr min-content 1fr;
    grid-template-rows: 1fr;
    gap: 48px 48px;
    grid-auto-flow: row;
    grid-template-areas: "footerMenuLeft stars footerMenuRight";
  }
}
.footerMenuLeft {
  grid-area: footerMenuLeft;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.footerStars {
  grid-area: stars;
  display: flex;
  align-items: center;
  justify-content: center;
}
.footerMenuRight {
  grid-area: footerMenuRight;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.stars {
  min-width: 152px;
}

.footerMenuLeft {
  .menu {
    gap: 1rem;
    justify-content: center;

    @include media("sm") {
      gap: 1.5rem;
    }

    @include media("xl") {
      justify-content: flex-start;
    }
  }
}

.footerStars {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.footerMenuRight {
  .menu {
    gap: 0.5rem;
    justify-content: center;

    @include media("sm") {
      gap: 4rem;
    }

    @include media("xl") {
      justify-content: flex-end;
    }
  }

  .menuItem {
    font-size: 14px;
  }
}

